--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.4",
+    "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
     "next": "14.0.2",
     "react": "^18",
