--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
-  API_KEY= "AIzaSyDcfCDd4RWQm7hhNuhd8_WSqX_SX-c_XY0",
-  AUTH_DOMAIN="sugar-sync-ea81d.firebaseapp.com",
-  PROJECT_ID= "sugar-sync-ea81d",
-  STORAGE_BUCKET= "sugar-sync-ea81d.appspot.com",
-  MESSAGING_SENDER_ID = "797764504841",
-  APP_ID= "1:797764504841:web:0cddb5ff930df971d057d8",
-  MEASUREMENT_ID= "G-VG6WN14WXM",
+  API_KEY= "",
+  AUTH_DOMAIN="",
+  PROJECT_ID= "",
+  STORAGE_BUCKET= "",
+  MESSAGING_SENDER_ID = "",
+  APP_ID= "",
+  MEASUREMENT_ID= "",
